tests/invalid/closure/capture_shared_ref_lifetime_conflict.facet
fn bad<'a, 'b>(
    r: unrestricted &'a unrestricted isize,
    s: unrestricted &'b unrestricted isize
) -> unrestricted isize {
    let f = closure [r, s](x: unrestricted isize) -> unrestricted isize { (*r) } in
    (f 0)
}
